--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros - ¡Hola Japón!</title>
+    <title>Nosotros - Youkoso</title>
     <meta name="description" content="Conoce nuestra historia, misión y pasión por la cultura japonesa. Somos tu conexión auténtica con Japón.">
     
     <!-- Favicon -->
@@ -541,7 +541,7 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="index.html" style="text-decoration: none; color: inherit;">
-                        <h1>¡Hola Japón!</h1>
+                        <h1>Youkoso</h1>
                     </a>
                 </div>
 
@@ -635,12 +635,12 @@
                         <span class="es-text">
                             Todo comenzó con un sueño: acercar la auténtica cultura japonesa a México. 
                             Después de años viviendo en Japón y experimentando de primera mano su rica tradición, 
-                            decidimos crear ¡Hola Japón! para compartir esta pasión con ustedes.
+                            decidimos crear Youkoso para compartir esta pasión con ustedes.
                         </span>
                         <span class="ja-text">
                             すべては一つの夢から始まりました：本格的な日本文化をメキシコに届けること。
                             日本で何年も生活し、その豊かな伝統を直接体験した後、
-                            この情熱を皆さんと共有するために¡Hola Japón!を設立しました。
+                            この情熱を皆さんと共有するためにYoukosoを設立しました。
                         </span>
                     </p>
                     <p>
@@ -761,8 +761,8 @@
                         <span class="ja-text">私たちのチーム</span>
                     </h2>
                     <p class="section-description">
-                        <span class="es-text">Conoce a las personas apasionadas detrás de ¡Hola Japón!</span>
-                        <span class="ja-text">¡Hola Japón!の背後にいる情熱的な人々をご紹介</span>
+                        <span class="es-text">Conoce a las personas apasionadas detrás de Youkoso</span>
+                        <span class="ja-text">Youkosoの背後にいる情熱的な人々をご紹介</span>
                     </p>
                 </div>
 
@@ -899,7 +899,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">¡Hola Japón!</h3>
+                    <h3 class="footer-title">Youkoso</h3>
                     <p class="footer-description">
                         <span class="es-text">Tu tienda de confianza para productos japoneses auténticos.</span>
                         <span class="ja-text">本格的な日本製品の信頼できる店舗。</span>
@@ -978,7 +978,7 @@
                     <div class="contact-info">
                         <p class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>info@holajapon.com</span>
+                            <span>info@youkoso.com</span>
                         </p>
                         <p class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -995,8 +995,8 @@
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
                     <p class="copyright">
-                        <span class="es-text">&copy; 2024 ¡Hola Japón! Todos los derechos reservados.</span>
-                        <span class="ja-text">&copy; 2024 ¡Hola Japón! すべての権利を保有しています。</span>
+                        <span class="es-text">&copy; 2024 Youkoso Todos los derechos reservados.</span>
+                        <span class="ja-text">&copy; 2024 Youkoso すべての権利を保有しています。</span>
                     </p>
                     <div class="footer-bottom-links">
                         <a href="#" class="footer-bottom-link">
