--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - ¡Hola Japón!</title>
+    <title>Blog - Youkoso</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -802,7 +802,7 @@
             <div class="header-content">
                 <!-- Logo -->
                 <div class="logo">
-                    <h1>¡Hola Japón!</h1>
+                    <h1>Youkoso</h1>
                 </div>
 
                 <!-- Navigation -->
@@ -1163,7 +1163,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h1>¡Hola Japón!</h1>
+                    <h1>Youkoso</h1>
                 </div>
 
                 <div class="footer-links">
@@ -1192,7 +1192,7 @@
                 </div>
 
                 <div class="footer-copy">
-                    <p>© 2024 ¡Hola Japón! - Todos los derechos reservados.</p>
+                    <p>© 2024 Youkoso - Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
