--- a/blog3.html
+++ b/blog3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramen vs Pozole: Sopas que Unen Culturas - ¡Hola Japón!</title>
+    <title>Ramen vs Pozole: Sopas que Unen Culturas - Youkoso</title>
     <meta name="description" content="Descubre los sorprendentes paralelismos entre el ramen japonés y el pozole mexicano, dos sopas que representan el alma de sus respectivas culturas.">
     
     <!-- Favicon -->
@@ -613,7 +613,7 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="index.html">
-                        <h1>¡Hola Japón!</h1>
+                        <h1>Youkoso</h1>
                         <span class="logo-subtitle">本物の日本</span>
                     </a>
                 </div>
@@ -1020,7 +1020,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">¡Hola Japón!</h3>
+                    <h3 class="footer-title">Youkoso</h3>
                     <p class="footer-description">Tu tienda de confianza para productos japoneses auténticos.</p>
                     <div class="social-links">
                         <a href="#" class="social-link" aria-label="Facebook">
@@ -1063,7 +1063,7 @@
                     <div class="contact-info">
                         <p class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>info@holajapon.com</span>
+                            <span>info@youkoso.com</span>
                         </p>
                         <p class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -1079,7 +1079,7 @@
 
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
-                    <p class="copyright">&copy; 2024 ¡Hola Japón! Todos los derechos reservados.</p>
+                    <p class="copyright">&copy; 2024 Youkoso Todos los derechos reservados.</p>
                     <div class="footer-bottom-links">
                         <a href="#" class="footer-bottom-link">
                             <span class="es-text">Política de Privacidad</span>
