--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - ¡Hola Japón!</title>
+    <title>Contacto - Youkoso</title>
     <meta name="description" content="Contáctanos para cualquier pregunta sobre cultura japonesa, productos o servicios. Estamos aquí para ayudarte.">
     
     <!-- Favicon -->
@@ -396,7 +396,7 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="index.html" style="text-decoration: none; color: inherit;">
-                        <h1>¡Hola Japón!</h1>
+                        <h1>Youkoso</h1>
                     </a>
                 </div>
 
@@ -629,8 +629,8 @@
                             <span class="es-text">Email</span>
                             <span class="ja-text">メール</span>
                         </h3>
-                        <p>info@holajapon.com</p>
-                        <p>soporte@holajapon.com</p>
+                        <p>info@youkoso.com</p>
+                        <p>soporte@youkoso.com</p>
                     </div>
 
                     <div class="contact-card">
@@ -687,7 +687,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">¡Hola Japón!</h3>
+                    <h3 class="footer-title">Youkoso</h3>
                     <p class="footer-description">
                         <span class="es-text">Tu tienda de confianza para productos japoneses auténticos.</span>
                         <span class="ja-text">本格的な日本製品の信頼できる店舗。</span>
@@ -766,7 +766,7 @@
                     <div class="contact-info">
                         <p class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>info@holajapon.com</span>
+                            <span>info@youkoso.com</span>
                         </p>
                         <p class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -783,8 +783,8 @@
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
                     <p class="copyright">
-                        <span class="es-text">&copy; 2024 ¡Hola Japón! Todos los derechos reservados.</span>
-                        <span class="ja-text">&copy; 2024 ¡Hola Japón! すべての権利を保有しています。</span>
+                        <span class="es-text">&copy; 2024 Youkoso Todos los derechos reservados.</span>
+                        <span class="ja-text">&copy; 2024 Youkoso すべての権利を保有しています。</span>
                     </p>
                     <div class="footer-bottom-links">
                         <a href="#" class="footer-bottom-link">
