--- a/offline.html
+++ b/offline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Offline - ¡Hola Japón!</title>
+    <title>Offline - Youkoso</title>
     <style>
         * {
             margin: 0;
@@ -118,11 +118,11 @@
         <p class="offline-message">
             <span class="es-text">
                 Parece que no tienes conexión a internet. No te preocupes, 
-                algunas funciones de ¡Hola Japón! están disponibles sin conexión.
+                algunas funciones de Youkoso están disponibles sin conexión.
             </span>
             <span class="ja-text" style="display: none;">
                 インターネット接続がないようです。心配しないでください、
-                ¡Hola Japón!の一部の機能はオフラインでも利用できます。
+                Youkosoの一部の機能はオフラインでも利用できます。
             </span>
         </p>
         
