--- a/product-detail.html
+++ b/product-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalles del Producto - Japan to Mexico Export Trading</title>
+    <title>Detalles del Producto - Youkoso</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="index.html" style="text-decoration: none; color: inherit;">
-                        <h1>¡Hola Japón!</h1>
+                        <h1>Youkoso</h1>
                     </a>
                 </div>
 
@@ -108,7 +108,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">¡Hola Japón!</h3>
+                    <h3 class="footer-title">Youkoso</h3>
                     <p class="footer-description">
                         <span class="es-text">Tu tienda de confianza para productos japoneses auténticos.</span>
                         <span class="ja-text">本格的な日本製品の信頼できる店舗。</span>
@@ -187,7 +187,7 @@
                     <div class="contact-info">
                         <p class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>info@holajapon.com</span>
+                            <span>info@youkoso.com</span>
                         </p>
                         <p class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -204,8 +204,8 @@
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
                     <p class="copyright">
-                        <span class="es-text">&copy; 2024 ¡Hola Japón! Todos los derechos reservados.</span>
-                        <span class="ja-text">&copy; 2024 ¡Hola Japón! すべての権利を保有しています。</span>
+                        <span class="es-text">&copy; 2024 Youkoso Todos los derechos reservados.</span>
+                        <span class="ja-text">&copy; 2024 Youkoso すべての権利を保有しています。</span>
                     </p>
                     <div class="footer-bottom-links">
                         <a href="#" class="footer-bottom-link">
