--- a/blog2.html
+++ b/blog2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Figuras de Acción vs Artesanías Mexicanas - ¡Hola Japón!</title>
+    <title>Figuras de Acción vs Artesanías Mexicanas - Youkoso</title>
     <meta name="description" content="Descubre cómo el arte de coleccionar figuras de anime se relaciona con la tradición mexicana de crear y apreciar artesanías.">
     
     <!-- Favicon -->
@@ -613,7 +613,7 @@
                 <!-- Logo -->
                 <div class="logo">
                     <a href="index.html">
-                        <h1>¡Hola Japón!</h1>
+                        <h1>Youkoso</h1>
                         <span class="logo-subtitle">本物の日本</span>
                     </a>
                 </div>
@@ -923,7 +923,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">¡Hola Japón!</h3>
+                    <h3 class="footer-title">Youkoso</h3>
                     <p class="footer-description">Tu tienda de confianza para productos japoneses auténticos.</p>
                     <div class="social-links">
                         <a href="#" class="social-link" aria-label="Facebook">
@@ -966,7 +966,7 @@
                     <div class="contact-info">
                         <p class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>info@holajapon.com</span>
+                            <span>info@youkoso.com</span>
                         </p>
                         <p class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -982,7 +982,7 @@
 
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
-                    <p class="copyright">&copy; 2024 ¡Hola Japón! Todos los derechos reservados.</p>
+                    <p class="copyright">&copy; 2024 Youkoso Todos los derechos reservados.</p>
                     <div class="footer-bottom-links">
                         <a href="#" class="footer-bottom-link">
                             <span class="es-text">Política de Privacidad</span>
