--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - ¡Hola Japón!</title>
+    <title>Productos - Youkoso</title>
     <meta name="description" content="Explora nuestra amplia colección de productos japoneses auténticos: figuras, manga, peluches y más.">
     
     <!-- Favicon -->
@@ -688,7 +688,7 @@
             <div class="header-content">
                 <!-- Logo -->
                 <div class="logo">
-                    <h1>¡Hola Japón!</h1>
+                    <h1>Youkoso</h1>
                 </div>
 
                 <!-- Navigation -->
@@ -928,7 +928,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">¡Hola Japón!</h3>
+                    <h3 class="footer-title">Youkoso</h3>
                     <p class="footer-description">
                         <span class="es-text">Tu tienda de confianza para productos japoneses auténticos.</span>
                         <span class="ja-text">本格的な日本製品の信頼できる店舗。</span>
@@ -1007,7 +1007,7 @@
                     <div class="contact-info">
                         <p class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>info@holajapon.com</span>
+                            <span>info@youkoso.com</span>
                         </p>
                         <p class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -1024,8 +1024,8 @@
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
                     <p class="copyright">
-                        <span class="es-text">&copy; 2024 ¡Hola Japón! Todos los derechos reservados.</span>
-                        <span class="ja-text">&copy; 2024 ¡Hola Japón! すべての権利を保有しています。</span>
+                        <span class="es-text">&copy; 2024 Youkoso Todos los derechos reservados.</span>
+                        <span class="ja-text">&copy; 2024 Youkoso すべての権利を保有しています。</span>
                     </p>
                     <div class="footer-bottom-links">
                         <a href="#" class="footer-bottom-link">
