--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     </noscript>
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-simple.css">
 
     <style>
         /* 通知バナーのスタイル */
@@ -809,8 +809,7 @@
     <div id="notifications" class="notifications-container"></div>
 
     <!-- Scripts -->
-    <script src="js/core.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/core-simple.js"></script>
     <script src="js/contact-enhanced.js"></script>
     <script>
         // 初期化
