Firebase設定ファイルを追加し、JSファイルの参照を修正

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     
     <!-- Preload critical resources -->
     <link rel="preload" href="css/style-simple.css" as="style">
-    <link rel="preload" href="js/main.js" as="script">
+    <link rel="preload" href="js/main-simple.js" as="script">
     <link rel="preload" href="data/data.json" as="fetch" type="application/json" crossorigin>
     
     <!-- DNS Prefetch -->
