--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     </style>
     
     <!-- Optimized font loading with fallbacks -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <noscript>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </noscript>
     
     <!-- Font Awesome with fallback -->
@@ -308,7 +308,7 @@
                                      alt="Japanese Culture" 
                                      class="hero-image"
                                      loading="eager"
-                                     onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'hero-image-placeholder\'>🏮</div>'">
+                                     onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'hero-image-placeholder\'><i class=\'fas fa-image\'></i></div>'">
                             </div>
                             <div class="hero-stats">
                                 <div class="hero-stat">
@@ -357,7 +357,9 @@
 
                 <div class="categories-grid">
                     <div class="category-card">
-                        <div class="category-icon">🎭</div>
+                        <div class="category-icon">
+                            <i class="fas fa-user-ninja"></i>
+                        </div>
                         <h3 class="category-title">
                             <span class="es-text">Figuras de Anime</span>
                             <span class="en-text">Anime Figures</span>
@@ -376,7 +378,9 @@
                     </div>
 
                     <div class="category-card">
-                        <div class="category-icon">🐰</div>
+                        <div class="category-icon">
+                            <i class="fas fa-heart"></i>
+                        </div>
                         <h3 class="category-title">
                             <span class="es-text">Peluches Kawaii</span>
                             <span class="en-text">Kawaii Plushies</span>
@@ -395,7 +399,9 @@
                     </div>
 
                     <div class="category-card">
-                        <div class="category-icon">📚</div>
+                        <div class="category-icon">
+                            <i class="fas fa-book"></i>
+                        </div>
                         <h3 class="category-title">
                             <span class="es-text">Manga Original</span>
                             <span class="en-text">Original Manga</span>
@@ -414,7 +420,9 @@
                     </div>
 
                     <div class="category-card">
-                        <div class="category-icon">👘</div>
+                        <div class="category-icon">
+                            <i class="fas fa-tshirt"></i>
+                        </div>
                         <h3 class="category-title">
                             <span class="es-text">Ropa y Accesorios</span>
                             <span class="en-text">Clothing & Accessories</span>
@@ -513,7 +521,9 @@
                              alt="Japan Culture" 
                              class="about-main-image"
                              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-                        <div class="image-placeholder" style="display: none;">🗾</div>
+                        <div class="image-placeholder" style="display: none;">
+                            <i class="fas fa-image"></i>
+                        </div>
                     </div>
                 </div>
             </div>
