--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
     <!-- Modern About Page Styles -->
     <style>
         :root {
-            --about-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
-            --about-text-shadow: 0 4px 20px rgba(0,0,0,0.3);
-            --about-card-shadow: 0 20px 60px rgba(0,0,0,0.1);
-            --about-hover-shadow: 0 30px 80px rgba(0,0,0,0.15);
-            --about-border-radius: 24px;
-            --about-transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            --about-gradient: linear-gradient(135deg, var(--primary-color) 0%, var(--accent-color) 100%);
+            --about-text-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            --about-card-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            --about-hover-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            --about-border-radius: 8px;
+            --about-transition: all 0.3s ease;
         }
 
         /* Reset About Page Styles - Override existing CSS */
@@ -42,8 +42,8 @@
 
         /* Modern Hero Section */
         .about-hero {
-            background: var(--about-gradient) !important;
-            min-height: 100vh !important;
+            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%) !important;
+            min-height: 60vh !important;
             display: flex !important;
             align-items: center !important;
             justify-content: center !important;
@@ -84,7 +84,7 @@
         }
 
         .about-hero h1 {
-            font-family: 'Inter', sans-serif !important;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
             font-size: clamp(3rem, 8vw, 6rem) !important;
             font-weight: 800 !important;
             margin-bottom: 2rem !important;
@@ -163,7 +163,7 @@
         }
 
         .story-text-enhanced h2 {
-            font-family: 'Inter', sans-serif !important;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
             font-size: clamp(2.5rem, 5vw, 3.5rem) !important;
             color: #1a202c !important;
             margin-bottom: 2.5rem !important;
@@ -257,7 +257,7 @@
         }
 
         .value-card-modern h3 {
-            font-family: 'Inter', sans-serif !important;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
             font-size: 1.75rem !important;
             color: #1a202c !important;
             margin-bottom: 1.5rem !important;
@@ -324,7 +324,7 @@
         }
 
         .team-card-modern h3 {
-            font-family: 'Inter', sans-serif !important;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
             font-size: 1.75rem !important;
             margin-bottom: 0.75rem !important;
             font-weight: 600 !important;
@@ -363,7 +363,7 @@
         }
 
         .stat-number-modern {
-            font-family: 'Inter', sans-serif !important;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
             font-size: 4rem !important;
             font-weight: 800 !important;
             color: #4ecdc4 !important;
@@ -395,7 +395,7 @@
         }
 
         .cta-modern h2 {
-            font-family: 'Inter', sans-serif !important;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
             font-size: clamp(2.5rem, 6vw, 3.5rem) !important;
             margin-bottom: 2rem !important;
             font-weight: 700 !important;
@@ -458,7 +458,7 @@
         }
 
         .section-title {
-            font-family: 'Inter', sans-serif !important;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif !important;
             font-size: clamp(2.5rem, 5vw, 3.5rem) !important;
             font-weight: 700 !important;
             margin-bottom: 1.5rem !important;
@@ -604,10 +604,10 @@
         <!-- Enhanced Hero Section -->
         <section class="about-hero">
             <div class="floating-elements">
-                <div class="floating-element">🎌</div>
-                <div class="floating-element">🏯</div>
-                <div class="floating-element">🌸</div>
-                <div class="floating-element">⛩️</div>
+                <div class="floating-element"></div>
+                <div class="floating-element"></div>
+                <div class="floating-element"></div>
+                <div class="floating-element"></div>
             </div>
             <div class="container">
                 <div class="about-hero-content fade-in">
@@ -657,7 +657,6 @@
                     </p>
                 </div>
                 <div class="story-visual fade-in">
-                    🏯
                 </div>
             </div>
         </section>
@@ -678,7 +677,7 @@
 
                 <div class="values-grid-modern">
                     <div class="value-card-modern fade-in">
-                        <span class="value-icon-modern">🎌</span>
+                        <span class="value-icon-modern"></span>
                         <h3>
                             <span class="es-text">Autenticidad</span>
                             <span class="ja-text">真正性</span>
@@ -696,7 +695,7 @@
                     </div>
 
                     <div class="value-card-modern fade-in">
-                        <span class="value-icon-modern">💝</span>
+                        <span class="value-icon-modern"></span>
                         <h3>
                             <span class="es-text">Pasión</span>
                             <span class="ja-text">情熱</span>
@@ -714,7 +713,7 @@
                     </div>
 
                     <div class="value-card-modern fade-in">
-                        <span class="value-icon-modern">🤝</span>
+                        <span class="value-icon-modern"></span>
                         <h3>
                             <span class="es-text">Comunidad</span>
                             <span class="ja-text">コミュニティ</span>
@@ -732,7 +731,7 @@
                     </div>
 
                     <div class="value-card-modern fade-in">
-                        <span class="value-icon-modern">⭐</span>
+                        <span class="value-icon-modern"></span>
                         <h3>
                             <span class="es-text">Excelencia</span>
                             <span class="ja-text">卓越性</span>
@@ -768,7 +767,7 @@
 
                 <div class="team-grid-modern">
                     <div class="team-card-modern fade-in">
-                        <div class="team-avatar">👨‍💼</div>
+                        <div class="team-avatar"></div>
                         <h3>Carlos Yamamoto</h3>
                         <p class="team-role-modern">
                             <span class="es-text">Fundador & CEO</span>
@@ -787,7 +786,7 @@
                     </div>
 
                     <div class="team-card-modern fade-in">
-                        <div class="team-avatar">👩‍💼</div>
+                        <div class="team-avatar"></div>
                         <h3>Ana María López</h3>
                         <p class="team-role-modern">
                             <span class="es-text">Directora de Productos</span>
@@ -806,7 +805,7 @@
                     </div>
 
                     <div class="team-card-modern fade-in">
-                        <div class="team-avatar">👨‍💻</div>
+                        <div class="team-avatar"></div>
                         <h3>Roberto Tanaka</h3>
                         <p class="team-role-modern">
                             <span class="es-text">Director de Tecnología</span>
